# minimal-vm-tool

./: AGENTS.md  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml  package.nix
agent/src/: main.rs  process.rs
agent/tests/: end_to_end.rs
protocol/: Cargo.toml  SPECIFICATION.md
protocol/src/: data_bytes.rs  lib.rs  tests.rs
protocol/src/io/: arc_err.rs  mod.rs  rx.rs  tx.rs
test-logger/: Cargo.toml
test-logger/src/: lib.rs
