[package]
name = "minimal-vm-exec-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "minimal-vm-exec-agent"
path = "src/main.rs"

[[test]]
name = "end_to_end"
harness = true


[dependencies]
minimal-vm-exec-protocol = { path = "../protocol" }
nix = { version = "0.31.3", features = ["user", "process", "signal", "personality"] }
clap = { version = "4.5", features = ["derive"] }
tokio = {version="1.52.3", features=["process", "io-std", "rt","macros","time","rt-multi-thread"]}
tokio-stream = {version="0.1.18"}
tokio-util = {version="0.7.18", features=["io"]}
async-stream="0.3.6"
itertools = "0.14.0"
anyhow = "1.0.102"
log = "0.4.32"
stderrlog = "0.6.0"

[dev-dependencies]
expect-test = "1.5"
dedent = "0.1.1"
regex = "1.12.3"
simple-test-logging = { git = "https://github.com/tiash/simple-test-logging.git" }
