[package]
name = "minimal-vm-exec-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
itertools = "0.14.0"
syn = "2.0.117"
split-stream-by="0.1.0"
tokio= { version= "1.52.3", features=["io-util","sync","rt","macros"]}
tokio-stream="0.1.18"
tokio-util = {version="0.7.18", features=["io"]}
anyhow = "1.0.102"
log = "0.4.32"


[dev-dependencies]
tokio-stream="0.1.18"
expect-test = "1.5.1"
quickcheck_macros = "1.2.0"
quickcheck = "1.1"
derive-quickcheck-arbitrary = "0.1.3"
# tokio= { version= "1.52.3", features=["macros"] }
